--- a/aboutme/styles/styles.css
+++ b/aboutme/styles/styles.css
@@ -4,12 +4,26 @@ body {
 
 nav {
     background-color: steelblue;
-    padding: 10px;
+    padding: 100px;
+    margin-bottom: 200px;
+    border: 4px solid black;
+}
+
+main {
+    background-color: steelblue;
+
+}
+
+.mydiv {
+    background-color: red;
+
 }
 
 a {
     color: white;
-    margin: 40px;
+    margin: 2px;
+    border: 4px solid black;
+    padding: 20px;
 }
 
 h1 {
