--- a/aboutme/styles/styles.css
+++ b/aboutme/styles/styles.css
@@ -1,4 +1,5 @@
 body {
+    border: 2px solid blue;
     text-align: center;
 }
 
@@ -24,6 +25,7 @@ a {
     margin: 2px;
     border: 4px solid black;
     padding: 20px;
+    font-size: 1.5em;
 }
 
 h1 {
@@ -31,12 +33,12 @@ h1 {
 }
 
 img {
-    width: 800px;
+    width: 80%;
     border: 4px solid steelblue;
 }
 
 p {
-    padding: 10px;
+    padding: 80%;
 }
 
 footer {
