--- a/aboutme/styles/styles.css
+++ b/aboutme/styles/styles.css
@@ -1,13 +1,13 @@
 body {
     border: 2px solid blue;
     text-align: center;
+    margin: 0;
 }
 
 nav {
     background-color: steelblue;
-    padding: 100px;
-    margin-bottom: 200px;
-    border: 4px solid black;
+    padding: 25px;
+    
 }
 
 main {
@@ -22,26 +22,28 @@ main {
 
 a {
     color: white;
-    margin: 2px;
-    border: 4px solid black;
-    padding: 20px;
+    
     font-size: 1.5em;
+    padding: 25px;
 }
 
 h1 {
-    color: steelblue;
+    color: white;
+    margin: 50px 0;
 }
 
 img {
     width: 80%;
-    border: 4px solid steelblue;
+    border: 10px solid rgb(0, 1, 2);
+    
 }
 
-p {
-    padding: 80%;
-}
+
 
 footer {
     background-color: steelblue;
     color: white;
+}
+footer p{
+    padding: 25px;
 }
