--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Poppins&display=swap');
+
+body {
+    font-family: Poppins, Helvetica, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+
+h2 {
+    margin: 0;
+}
+
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -7,6 +20,8 @@ nav a {
     text-align: center;
     color: #fae072;
     text-decoration: none;
+    padding: 35px;
+
 }
 
 #hero-msg h1,
@@ -45,12 +60,21 @@ nav a:hover {
     background-color: #fae072;
     color: #0c4168;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
+
 }
 
 .join {
     background-color: #fae072;
     color: black;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 
 }
 
@@ -66,16 +90,23 @@ nav a:hover {
 
 .msg {
     background-color: #0c4168;
+    line-height: 1.5em;
+    padding: 35px;
+    margin-top: 150px;
 }
 
 footer {
     background-color: #0c4168;
-
+    padding: 25px 50px;
+    margin-top: 200px;
 
 }
 
 .home-title {
     color: black;
+    font-family: "Bubblegum Sans";
+    font-size: 2em;
+    margin-top: 10px;
 }
 
 h4 {
@@ -84,11 +115,14 @@ h4 {
 
 .msg h2 {
     color: #d9e4ea;
+    font-family: "Bubblegum Sans";
 
 }
 
 .msg p {
     color: #d9e4ea;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 
 footer h3 {
@@ -111,6 +145,7 @@ footer a:hover {
 
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 
 #hero-img {
@@ -119,4 +154,31 @@ footer a:hover {
 
 footer h3 a:hover {
     text-decoration: underline;
+}
+
+#logo_link {
+    padding-top: 5px;
+}
+
+footer .social img {
+    padding-top: 15px;
+}
+
+.rivers-card,
+.camping-card,
+.rapids-card {
+    margin: 200px 0;
+}
+
+.card-img {
+    border: 10px solid #0c4168;
+}
+
+main section img {
+    box-sizing: border-box;
+
+}
+
+.mountains {
+    margin-top: 50px ;
 }
