--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -27,6 +27,8 @@ nav a {
 #hero-msg h1,
 #hero-msg h4 {
     text-align: center;
+    color: white;
+
 
 }
 
@@ -41,6 +43,8 @@ main section {
 #background {
     height: 725px;
     background-color: #fae072;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 body {
@@ -49,6 +53,8 @@ body {
 
 header {
     background-color: #0c4168;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 
 nav a:hover {
@@ -93,18 +99,26 @@ nav a:hover {
     line-height: 1.5em;
     padding: 35px;
     margin-top: 150px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+
 }
 
 footer {
     background-color: #0c4168;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
 
 }
 
 .home-title {
     color: black;
-    font-family: "Bubblegum Sans" Helvetica, sans-serif;
+    font-family: "Bubblegum Sans",Helvetica, sans-serif;
     font-size: 2em;
     margin-top: 10px;
 }
@@ -115,7 +129,7 @@ h4 {
 
 .msg h2 {
     color: #d9e4ea;
-    font-family: "Bubblegum Sans" Helvetica, sans-serif;
+    font-family: "Bubblegum Sans",Helvetica, sans-serif;
 
 }
 
@@ -158,7 +172,10 @@ footer h3 a:hover {
 }
 
 #logo_link {
+
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 footer .social img {
@@ -173,6 +190,9 @@ footer .social img {
 
 .card-img {
     border: 10px solid #0c4168;
+    width: 100%;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
 main section img {
@@ -181,5 +201,101 @@ main section img {
 }
 
 .mountains {
-    margin-top: 50px ;
+    margin-top: 50px;
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
+
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+
+}
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
