--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -16,6 +16,13 @@ h2 {
     margin: 0 auto;
 }
 
+#content2 {
+    max-width: 1600px;
+    margin: 0 auto;
+
+
+}
+
 nav a {
     text-align: center;
     color: #fae072;
@@ -118,7 +125,7 @@ footer {
 
 .home-title {
     color: black;
-    font-family: "Bubblegum Sans",Helvetica, sans-serif;
+    font-family: "Bubblegum Sans", Helvetica, sans-serif;
     font-size: 2em;
     margin-top: 10px;
 }
@@ -129,7 +136,7 @@ h4 {
 
 .msg h2 {
     color: #d9e4ea;
-    font-family: "Bubblegum Sans",Helvetica, sans-serif;
+    font-family: "Bubblegum Sans", Helvetica, sans-serif;
 
 }
 
@@ -258,43 +265,243 @@ nav {
     transform: scale(1.1);
 
 }
+
+#hero2 {
+    background-color: #fae072;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+
+
+
+}
+
+#hero2-box {
+    grid-column: 1/3;
+    margin-bottom: -9px;
+    
+
+
+}
+
+#hero2-img {
+    width: 100%;
+    
+    height: auto;
+}
+
+.hero-information {
+    align-self: center;
+    align-items: center;
+    grid-column: 3/4;
+    width: 100%;
+
+}
+
+.hero-information h1 {
+    font-family: "Bubblegum Sans", Helvetica, sans-serif;
+    font-size: 3em;
+}
+
+.hero-information p {
+    font-size: 1em;
+}
+
+#tours {
+
+    background-color: #0c4168;
+}
+
+
+.grand_canyon {
+    border-radius: 25px;
+    background-color: #0c4168;
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column: 1/3;
+    grid-row: 1/3;
+}
+
+.grand_canyon_img {
+    padding: 40px;
+    grid-column: 1/2;
+    grid-row: 1/3;
+    width: 100%;
+   
+
+}
+
+.grand_canyon_info {
+    padding: 15px;
+    grid-column: 2/3;
+    grid-row: 1/3;
+    color: #fae072;
+    align-self: center;
+    align-items: center;
+
+}
+
+.salmon_river {
+    border-radius: 25px;
+    background-color: #0c4168;
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column: 1/3;
+    grid-row: 1/3;
+}
+
+.salmon_river_img {
+    padding: 40px;
+    grid-column: 1/2;
+    grid-row: 1/3;
+    width: 100%;
+}
+
+.salmon_river_info {
+    padding: 20px;
+    align-self: center;
+    align-items: center;
+    grid-column: 2/3;
+    grid-row: 1/3;
+    color: #fae072;
+}
+
+
+.desolation {
+    border-radius: 25px;
+    background-color: #0c4168;
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column: 1/3;
+    grid-row: 1/3;
+
+}
+
+.desolation_img {
+    padding: 40px;
+    grid-column: 1/2;
+    grid-row: 1/3;
+    width: 100%;
+
+}
+
+.desolation_info {
+    padding: 20px;
+    grid-column: 2/3;
+    grid-row: 1/3;
+    color: #fae072;
+    align-self: center;
+    align-items: center;
+
+}
+
+.tours h2 {
+    font-family: "Bubblegum Sans", Helvetica, sans-serif; 
+    margin-top: 40px;
+    margin-bottom: -20px;
+    text-align: center;
+    text-decoration: underline;
+
+}
+
+.tours h3 {
+    color: #fae072;
+    text-align: center;
+    font-weight: bold;
+}
+
+.tours p{
+    padding: 30px;
+    color: #d9e4ea;
+
+}
+
+.tours h2:hover{
+    color:#396E94;
+
+}
+
+
+
+
 @media screen and (max-width: 900px) {
-    #hero, .home-grid {
+    .tours p{
+        margin-top: -50px;
+        font-size: 12px;
+        
+    }
+    #content2 h3{
+        margin-top: 3px;
+        padding: 15px;
+        font-size: 20px;
+    }
+
+    #content2 h1{
+        
+        font-size: 25px;
+    }
+
+    .hero-information p{
+        font-size: 13px;
+    }
+
+    #hero,
+    .home-grid {
         display: block;
         height: auto;
     }
-    nav, footer {
+
+    nav,
+    footer {
         flex-direction: column;
     }
+
     nav a {
         display: block;
         padding: 15px;
     }
+
     #hero {
         margin-top: 0;
     }
+
     #hero-msg {
         margin-top: 0;
     }
+
     #hero-msg h4 {
         display: none;
     }
+
     .home-title {
         font-size: 25px;
         color: #6f7364;
     }
-    .rivers-card, .camping-card, .rapids-card { 
+
+    .rivers-card,
+    .camping-card,
+    .rapids-card {
         margin: 50px auto;
         width: 60%;
     }
+
     #background {
         display: none;
     }
-    .mountains, .msg {
-        width: 80%;
+
+    .mountains,
+    .msg,
+    #her2-img,
+    .grand_canyon_img,
+    .desolation_img,
+    .salmon_river_img{
+        width: 100%;
         display: block;
         margin: 0 auto;
     }
+
     footer {
         margin-top: 25px;
     }
