--- a/unity_photography/styles/site-plan.css
+++ b/unity_photography/styles/site-plan.css
@@ -5,9 +5,9 @@ Fonts are separated by a | */
 :root {
   /* change the values below to your colors from your palette */
   --primary-color: #E8D3B9  ;
-  --secondary-color: #4B442A ;
-  --accent1-color: #FCCABF;
-  --accent2-color: #d17f04;
+  --secondary-color: #26190C ;
+  --accent1-color: #fae072;
+  --accent2-color: #D4AC0D;
 
   /* change the values below to your chosen font(s) */
   --heading-font: Ramaraja, Helvetica, sans-serif;
