--- a/unity_photography/styles/styles.css
+++ b/unity_photography/styles/styles.css
@@ -26,6 +26,12 @@ h3 {
 
 }
 
+#content3 {
+    max-width: 1600px;
+    margin: 0 auto;
+
+}
+
 nav a {
     text-align: center;
     color: #D4AC0D;
@@ -599,14 +605,216 @@ footer h3 {
     }
 }
 
+.hero3 {
+    background-color: #fae072;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+
+}
+
+.question{
+    width: 100%;
+    grid-column: 2/4;
+    height: 700px;
+    
+}
+
+#hero3-box{
+    grid-column: 1/2;
+    text-align: center;
+    border: 5px solid black;
+}
+
+.hero3 h1{
+    font-size: 2.5em;
+    padding: 5px;
+    text-decoration: underline;
+    font-weight: bold;
+    margin-top: 80px;
+}
+
+.hero3 p{
+    font-size: 2em;
+    padding: 40px;
+    font-weight: bold;
+    margin-top: 20px;
+    
+}
+
+.pricing-booking{
+    background-color: #26190C;
+    border: 5px solid black;
+    margin-top: 15px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+
+}
+
+.pricing-booking h2{
+    grid-column: 2/3;
+    font-size: 3em;
+    color: #D4AC0D;
+    text-align: center;
+    font-weight: bold;
+    transition: transform .5s;
+}
+
+.pricing-booking h2:hover{
+    text-decoration: underline;
+    color: #fae072;
+
+}
+
+.pay-pic{
+    grid-column: 2/3;
+    width: 50%;
+    justify-self: center;
+    border: 10px solid black;
+    transition: transform .5s;
+    
+}
+.pay-pic:hover, .map-pic:hover {
+    /* Start the shake animation and make the animation last for 0.5 seconds */
+    animation: shake 0.75s;
+    
+
+    /* When the animation is finished, start again */
+    animation-iteration-count: 2;
+}
+
+@keyframes shake {
+    0% {
+        transform: translate(1px, 1px) rotate(0deg);
+    }
+
+    10% {
+        transform: translate(-1px, -2px) rotate(-1deg);
+    }
+
+    20% {
+        transform: translate(-3px, 0px) rotate(1deg);
+    }
+
+    30% {
+        transform: translate(3px, 2px) rotate(0deg);
+    }
+
+    40% {
+        transform: translate(1px, -1px) rotate(1deg);
+    }
+
+    50% {
+        transform: translate(-1px, 2px) rotate(-1deg);
+    }
+
+    60% {
+        transform: translate(-3px, 1px) rotate(0deg);
+    }
+
+    70% {
+        transform: translate(3px, 1px) rotate(-1deg);
+    }
+
+    80% {
+        transform: translate(-1px, -1px) rotate(1deg);
+    }
+
+    90% {
+        transform: translate(1px, 2px) rotate(0deg);
+    }
+
+    100% {
+        transform: translate(1px, -2px) rotate(-1deg);
+    }
+}
+
+
+
+.pricing{
+    grid-column: 1/2;
+    text-align: center;
+    padding: 40px;
+    margin-top: -250px;
+    margin-right: -50px;
+
+}
+
+.booking{
+    grid-column: 3/4;
+    text-align: center;
+    padding: 40px;
+    margin-top: -250px;
+    margin-left: -50px;
+}
+
+
+.pricing-booking h3{
+    color: #D4AC0D;
+    font-size: 2em;
+    text-decoration: underline;
+}
+
+.pricing-booking p{
+    color: #D4AC0D;
+    font-weight: bold;
+    font-size: 1.5em;
+    margin-top: -20px;
+}
+
+
+
+.order-bounds{
+    background-color: #D4AC0D;
+    border: 5px solid black;
+    margin-top: 15px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+
+}
+
+.order-bounds h3{
+    grid-column: 2/3;
+    font-size: 2em;
+    color: #26190C;;
+    text-align: center;
+    font-weight: bolder;
+    text-decoration: underline;
+}
+
+.map-pic{
+    grid-column: 2/3;
+    width: 30%;
+    justify-self: center;
+    border: 10px solid black;
+    margin-top: 50px;
+    
+}
+
+.order{
+    grid-column: 1/2;
+    text-align: center;
+    padding: 40px;
+    margin-top: -175px;
+    margin-right: -50px;
+}
+
+.bounds{
+    grid-column: 3/4;
+    text-align: center;
+    padding: 40px;
+    margin-top: -175px;
+    margin-left: -50px;
+}
 
 
 
 
-
-
-
-
+.order-bounds p{
+    color: #26190C;
+    font-weight: bold;
+    font-size: 1.5em;
+    margin-top: -20px;
+}
 
 
 
@@ -623,6 +831,13 @@ footer h3 {
         height: auto;
     }
 
+    .hero3 {
+        display: block;
+        height: auto;
+    }
+
+
+
     nav,
     footer {
         flex-direction: column;
@@ -634,6 +849,8 @@ footer h3 {
         width: 100%;
 
     }
+
+    
 
     .logo-img {
         margin-top: 40px;
@@ -648,11 +865,19 @@ footer h3 {
         height: 450px;
     }
 
+    .question{
+        height: 350px;
+    }
+
     #hero {
         margin-top: 0;
     }
 
     #hero2{
+        margin-top: 0;
+    }
+
+    .hero3{
         margin-top: 0;
     }
 
@@ -721,6 +946,70 @@ footer h3 {
 
     .family2-pic, .wedding2-pic, .school2-pic{
         height: 250px;
+    }
+
+    .hero3 h1{
+        margin-top: -10px;
+    }
+
+    
+    .hero3 p{
+        margin-top: -10px;
+        font-size: 1.5em;
+        margin-top: -70px;
+    }
+
+    .pricing-booking h2{
+        font-size: 2em;
+    }
+
+    
+    .pricing-booking h3{
+        font-size: 1.5em;
+    }
+
+    .pricing-booking p{
+        font-size: 1em;
+    }
+
+    .booking{
+        margin-top: -70px;
+        margin-left: 5px;
+        grid-column: 1/4;
+      
+    }
+
+    .pricing{
+        margin-top: -50px;
+        margin-right: 5px;
+        grid-column: 1/4;
+        text-align: center;
+    }
+
+    .order-bounds h3{
+        font-size: 1.5em;
+    }
+
+    .order-bounds p{
+        font-size: 1em;
+    }
+
+    .map-pic{
+        margin-bottom: 20px;
+    }
+
+    .order{
+        margin-top: -70px;
+        margin-right: 5px;
+        grid-column: 1/4;
+      
+    }
+
+    .bounds{
+        margin-top: -50px;
+        margin-left: -5px;
+        grid-column: 1/4;
+        text-align: center;
     }
 
 
